apps/frontend/base/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  hosts:
    - "frontend.127.0.0.1.nip.io"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - name: primary
      route:
        - destination:
            host: frontend
            port:
              number: 80
          weight: 100
        - destination:
            host: frontend-canary
            port:
              number: 80
          weight: 0
